frontend/src/index.css
@import "tailwindcss";

:root {
  --app-bg: #242424;
  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;
  font-size: 16px;
  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: var(--app-bg);

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

html {
  overscroll-behavior: none;
  height: 100vh;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}
a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: flex;
  place-items: center;
  min-width: 320px;
  /*min-height: 100vh;*/
  scroll-behavior: auto;
  overflow: scroll;
  height: 100%;
  /*width: 99.30vw;*/
  width: 100%;
}

.freezeScroll {
  overflow: hidden;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
    background-color: #ffffff;
  }
  a:hover {
    color: #747bff;
  }
  button {
    background-color: #f9f9f9;
  }
}

